Refactor: Split project into frontend, backend, and media-server